--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -144,49 +144,21 @@ body {
     margin: 0;
 }
 
-@-webkit-keyframes fadeOut {
-    0% {
-        opacity: 1;
-    }
-
-    50% {
-        opacity: 1;
-    }
-
-    100% {
-        opacity: 0;
-    }
-}
-
-@keyframes fadeOut {
-    0% {
-        opacity: 1;
-    }
-
-    50% {
-        opacity: 1;
-    }
-
-    100% {
-        opacity: 0;
-    }
-}
 
 #loader-container {
     display: flex;
-    text-align: center;
     justify-content: center;
+    align-items: center;
     position: fixed;
-    padding: 20%;
     top: 0;
     left: 0;
-    right: 0;
-    bottom: 0;
+    width: 100%;
+    height: 100%;
     background-color: white;
-    color: black;
     opacity: 0;
-    -webkit-animation: fadeOut 2s;
-    animation: fadeOut 3s;
+    animation: fadeOut 3s forwards;
+    z-index: 9999;
+    pointer-events: none;
 }
 
 .dot {
@@ -208,8 +180,26 @@ body {
 
 @keyframes loader {
     100% {
-        transform: translateY(-30PX);
+        transform: translateY(-30px);
     }
+}
+
+@keyframes fadeOut {
+    0% {
+        opacity: 1;
+    }
+
+    50% {
+        opacity: 1;
+    }
+
+    100% {
+        opacity: 0;
+    }
+}
+
+#loader-container.fadeout-done {
+    pointer-events: auto;
 }
 
 .header_menu {
@@ -261,9 +251,11 @@ body {
     padding: 10%;
 }
 
-.section_textReservation * {
+.section_textReservation h1,
+p {
     text-align: center;
-    margin-bottom: 15px;
+    padding-bottom: 2%;
+    ;
 }
 
 .padding_section {
@@ -455,16 +447,23 @@ body {
 
 
 footer {
-    padding: 20px;
+    padding: 4%;
+    align-items: flex-start;
+    width: 100%;
 }
 
 .footer_logo {
     margin-bottom: 3%;
 }
 
+.footer_links {
+    width: 100%;
+}
+
 .footer_link {
     list-style-type: none;
     margin-top: 2%;
+    padding-bottom: 2%;
 
 }
 
@@ -562,6 +561,22 @@ footer {
 }
 
 @media screen and (min-width: 768px) {
+    .size_40 {
+        font-size: 40px;
+    }
+
+    .size_18 {
+        font-size: 18px;
+    }
+
+    .size_16 {
+        font-size: 16px;
+    }
+
+    #section_info {
+        padding: 3%;
+    }
+
     .fonctionnement_BarreBoutons {
         flex-direction: row;
         width: 90%;
@@ -605,6 +620,7 @@ footer {
 
     .footer_links {
         flex-direction: row;
+        align-items: baseline;
         width: 65%;
         margin-top: 0%;
     }
